2022-04-04  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Provide better messages when gi-docgen cannot be found
        https://bugs.webkit.org/show_bug.cgi?id=238729

        Reviewed by Carlos Garcia Campos.

        When gi-docgen cannot be found, or cannot be executed, provide better error messages
        than those provided by CMake. While at it, make the messages mention how gi-docgen
        can be installed inside the WebKit source tree to be used for the build.

        * Source/cmake/FindGIDocgen.cmake:

2022-04-04  Miguel Gomez  <magomez@igalia.com>

        Change contributor status of Miguel Gomez from committer to reviewer
        https://bugs.webkit.org/show_bug.cgi?id=238730

        Unreviewed.

        * metadata/contributors.json:

2022-04-02  Adrian Perez de Castro  <aperez@igalia.com>

        [GTK] Replace gtk-doc with gi-docgen
        https://bugs.webkit.org/show_bug.cgi?id=226662

        Reviewed by Michael Catanzaro.

        Import two new CMake modules which define commands to easy setup of GObject-Introspection
        and gi-docgen. These in turn allow to remove a bunch of duplicated CMake code, reuse
        the same for both the WPE and GTK ports, and remove the gnarly DocBook templates and
        other auxiliary files previously used by gtk-doc (which amount to a sizeable amount of
        code).

        While at it, do a quick pass to fix the most egregious issues reported by gi-docgen's
        linting mode and that all public symbols end up with at least some documentation in
        the generated output. Follow-up patches will be needed to keep adapting to the style
        encouraged by gi-docgen, fix linking between documented entities, make code examples
        display properly, and a few other things.

        * Source/PlatformGTK.cmake: Adapted to use the new CMake modules.
        * Source/PlatformWPE.cmake: Ditto.
        * Source/cmake/FindGI.cmake: Added.