@@ -102,6 +102,6 @@ file CMakeLists.txt
 file Tools/CMakeLists.txt
 file Tools/PlatformGTK.cmake
 
-directory ${CMAKE_BINARY_DIR}/Documentation/webkit2gtk-${WEBKITGTK_API_DOC_VERSION}/html/webkit2gtk-${WEBKITGTK_API_DOC_VERSION} Documentation/webkit2gtk-${WEBKITGTK_API_DOC_VERSION}/html
-directory ${CMAKE_BINARY_DIR}/Documentation/webkitdomgtk-${WEBKITGTK_API_DOC_VERSION}/html/webkitdomgtk-${WEBKITGTK_API_DOC_VERSION} Documentation/webkitdomgtk-${WEBKITGTK_API_DOC_VERSION}/html
-directory ${CMAKE_BINARY_DIR}/Documentation/jsc-glib-${WEBKITGTK_API_DOC_VERSION}/html/jsc-glib-${WEBKITGTK_API_DOC_VERSION} Documentation/jsc-glib-${WEBKITGTK_API_DOC_VERSION}/html
+directory ${CMAKE_BINARY_DIR}/Documentation/javascriptcoregtk-${WEBKITGTK_API_VERSION} Documentation/jsc-glib-${WEBKITGTK_API_DOC_VERSION}
+directory ${CMAKE_BINARY_DIR}/Documentation/webkit2gtk-${WEBKITGTK_API_VERSION} Documentation/webkit2gtk-${WEBKITGTK_API_DOC_VERSION}
+directory ${CMAKE_BINARY_DIR}/Documentation/webkit2gtk-web-extension-${WEBKITGTK_API_VERSION} Documentation/webkit2gtk-web-extension-${WEBKITGTK_API_DOC_VERSION}
